# wgpu-hello-world

./: Cargo.toml  README.md  build.rs  config.toml  index.html
assets/: Cube-Tris-Textured-Animated.gltf  Plane-Tris-Textured.gltf  Plane-Tris-Untextured.gltf  banana.mtl  ferris.mtl  license.txt  plane.mtl  scene.gltf
src/: camera.rs  context.rs  instance.rs  lib.rs  light.wgsl  main.rs  model.rs  node.rs  primitive.wgsl  resources.rs  shader.wgsl  texture.rs  window.rs
src/pass/: egui.rs  mod.rs  phong.rs
src/primitives/: cube.rs  mod.rs  plane.rs  sphere.rs
src/shaders/: egui.wgsl
