[package]
name = "wgpu-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytemuck = { version = "1.12.1", features = [ "derive" ] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
env_logger = "0.9.1"
image = { version = "0.24.4", default-features = false, features = ["png", "jpeg"] }
log = "0.4.17"
pollster = "0.2.5"
tobj = { version = "3.2.1", features = [
    "async",
]}
wgpu = "0.13.1"
winit = "0.27.3"

# WASM specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
reqwest = { version = "0.11" }
wgpu = { version = "0.13", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
 

# Exports to Rust and C/C++ library
[lib]
crate-type = ["cdylib", "rlib"]